tests/ui/consts/control-flow/try.stderr
error[E0658]: `?` is not allowed in a `const fn`
  --> $DIR/try.rs:6:5
   |
LL |     x?;
   |     ^^
   |
   = note: see issue #74935 <https://github.com/rust-lang/rust/issues/74935> for more information
   = help: add `#![feature(const_try)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0015]: `?` cannot determine the branch of `Option<i32>` in constant functions
  --> $DIR/try.rs:6:5
   |
LL |     x?;
   |     ^^
   |
note: impl defined here, but it is not `const`
  --> $SRC_DIR/core/src/option.rs:LL:COL
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
help: add `#![feature(const_trait_impl)]` to the crate attributes to enable
   |
LL + #![feature(const_trait_impl)]
   |

error[E0015]: `?` cannot convert from residual of `Option<i32>` in constant functions
  --> $DIR/try.rs:6:5
   |
LL |     x?;
   |     ^^
   |
note: impl defined here, but it is not `const`
  --> $SRC_DIR/core/src/option.rs:LL:COL
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
help: add `#![feature(const_trait_impl)]` to the crate attributes to enable
   |
LL + #![feature(const_trait_impl)]
   |

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0015, E0658.
For more information about an error, try `rustc --explain E0015`.
